[package]
name = "rrcm"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
description = "Rust RC file Management commands"
repository = "https://github.com/mizuki0629/rrcm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
itertools = "0.11.0"
path_abs = "0.5.1"
trash = "3.0.6"
dunce = "1.0.3"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
maplit = "1.0.2"
dirs-sys = "0.4.1"
log = "0.4.19"
simplelog = "0.12.1"
ansi_term = "0.12.1"
serde_yaml = "0.9"
indexmap = { version = "2.0.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.1"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
pretty_assertions = "1.4.0"
predicates = "3.0.3"
indoc = "2.0.3"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.22.0"

[badges]
github = { repository = "mizuki0629/rrcm" , workflow = "Test" }
