[package]
name = "rrcm"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
description = "Rust RC file Management commands"
repository = "https://github.com/mizuki0629/rrcm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
itertools = "0.11.0"
path_abs = "0.5.1"
trash = "3.1.2"
dunce = "1.0.4"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
maplit = "1.0.2"
dirs-sys = "0.4.1"
log = "0.4.20"
simplelog = "0.12.1"
ansi_term = "0.12.1"
serde_yaml = "0.9"
indexmap = { version = "2.1.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.2"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
pretty_assertions = "1.4.0"
predicates = "3.0.4"
indoc = "2.0.4"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27.1", features = ["user"] }

[badges]
github = { repository = "mizuki0629/rrcm" , workflow = "Test" }
