[package]
name = "rrcm"
version = "0.4.2"
edition = "2021"
license-file = "LICENSE"
description = "Rust RC file Management commands"
repository = "https://github.com/mizuki0629/rrcm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
itertools = "0.14.0"
path_abs = "0.5.1"
trash = "5.2.2"
dunce = "1.0.5"
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
maplit = "1.0.2"
dirs-sys = "0.5.0"
log = "0.4.26"
simplelog = "0.12.2"
nu-ansi-term = "0.50.1"
indexmap = { version = "2.8.0", features = ["serde"] }
url = "2.5.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
cfg-if = "1.0.0"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
pretty_assertions = "1.4.1"
predicates = "3.1.3"
indoc = "2.0.6"
serde_yml = "0.0.12"
ansi_term = "0.12.1"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29.0", features = ["user"] }

[badges]
github = { repository = "mizuki0629/rrcm", workflow = "Test" }
